Added proper plus sign to menu

--- a/views/menu.erb
+++ b/views/menu.erb
@@ -18,7 +18,7 @@
   </div>
 
 
-    <div class="drink">
+    <div class="drink" style="padding:10px;">
       <div class="row-fluid" style="background: #555555; color: #f9f9f9">
       	
         <form action='/orders' method='post' class="form-horizontal">
@@ -71,16 +71,15 @@
             </p>
 
           </div>
-
         </div>
-      
       </div>
-    <br>
   </div>
 
-  <h3><a href="#" class="add-drink">Add Another</a></h3>
+  <div style="text-align:center; margin-top:-15px;">
+    <h3><a href="#" class="add-drink"><i class="icon-plus-sign icon-large"></i></a></h3>
+  </div>
 
-  <p><input class="btn btn-large btn-info" type='submit' value='Send Drink Order'></p>
+  <p><input class="btn btn-large btn-info" style="float:right;" type='submit' value='Send Drink Order'></p>
   </form>
 
 </div>
