--- a/views/menu.erb
+++ b/views/menu.erb
@@ -30,7 +30,7 @@
           <div style="float:right; padding:10px">      
       		
             <p>
-              <select>
+              <select class="input-medium">
             		<option>Smirnoff - Well</option>
             		<option>Ketel One</option>
             		<option>Tito's</option>
@@ -40,7 +40,7 @@
             </p>
             
             <p>
-          		<select>
+          		<select class="input-medium">
             		<option>Cola</option>
             		<option>Diet Cola</option>
             		<option>Cranberry Juice</option>
@@ -61,7 +61,7 @@
             </p>
             
             <p>
-          		<select>
+          		<select class="input-medium">
             		<option>Cherry</option>
             		<option>Lemon</option>
             		<option>Lime</option>
