added select for mixer and garnish

--- a/views/menu.erb
+++ b/views/menu.erb
@@ -41,7 +41,8 @@
             
             <p>
           		<select class="input-medium">
-            		<option>Cola</option>
+            		<option>- select mixer -</option>
+                <option>Cola</option>
             		<option>Diet Cola</option>
             		<option>Cranberry Juice</option>
             		<option>Ginger Ale</option>
@@ -62,7 +63,8 @@
             
             <p>
           		<select class="input-medium">
-            		<option>Cherry</option>
+            		<option>- select garnish -</option>
+                <option>Cherry</option>
             		<option>Lemon</option>
             		<option>Lime</option>
             		<option>Olive</option>
