Added some other mixer options

--- a/views/menu.erb
+++ b/views/menu.erb
@@ -42,6 +42,9 @@
             <p>
           		<select class="input-medium">
             		<option>- select mixer -</option>
+                <option>* Neat *</option>
+                <option>* Rocks *</option>
+                <option>* Shot *</option>
                 <option>Cola</option>
             		<option>Diet Cola</option>
             		<option>Cranberry Juice</option>
