--- a/views/menu.erb
+++ b/views/menu.erb
@@ -17,6 +17,23 @@
      </div>
   </div>
 
+  <ul>
+    <li class="dropdown">
+      <a href="#"
+            style="padding-top: 10px; a: white"
+            class="dropdown-toggle"
+            data-toggle="dropdown">
+            <i class="icon-reorder icon-large"></i>
+      </a>
+      <ul class="dropdown-menu">
+        <li><a href="#" class="add-gin">Gin</a></li>
+        <li><a href="#" class="add-rum">Rum</a></li>
+        <li><a href="#" class="add-tequila">Tequila</a></li>
+        <li><a href="#" class="add-vodka">Vodka</a></li>
+      </ul>
+    </li>
+  </ul>
+
     <div class="drinks-container"></div>
 
     <div class="drink-template" style="padding:10px; display: none;">
@@ -32,9 +49,11 @@
       		  
             <p>
               <select class="input-medium">
-                <% @vodkas.each do |vodka| %>
-              		<option><%= vodka.name %></option>
-              	<% end %>
+                <div class="liquor-type">
+                  <% @vodkas.each do |vodka| %>
+                		<option><%= vodka.name %></option>
+                	<% end %>
+                </div>
             	</select>
             </p>
             
@@ -103,6 +122,54 @@
     });
  
     $('.add-drink').click(function(e) {
+      e.preventDefault();
+
+      $(".drink-template")
+        .clone()
+        .show()
+        .removeClass("drink-template")
+        .addClass("drink")
+        .appendTo(".drinks-container");
+    });
+
+    $('.add-gin').click(function(e) {
+      e.preventDefault();
+
+      $(".drink-template")
+        .clone()
+        .show()
+        .removeClass("drink-template")
+        .addClass("drink")
+        .appendTo(".drinks-container");
+        $(".liquor-type")
+          .html("<% @gins.each do |gin| %>
+                    <option><%= gin.name %></option>
+                  <% end %>");
+    });
+
+    $('.add-rum').click(function(e) {
+      e.preventDefault();
+
+      $(".drink-template")
+        .clone()
+        .show()
+        .removeClass("drink-template")
+        .addClass("drink")
+        .appendTo(".drinks-container");
+    });
+
+    $('.add-tequila').click(function(e) {
+      e.preventDefault();
+
+      $(".drink-template")
+        .clone()
+        .show()
+        .removeClass("drink-template")
+        .addClass("drink")
+        .appendTo(".drinks-container");
+    });
+
+    $('.add-vodka').click(function(e) {
       e.preventDefault();
 
       $(".drink-template")
