Added the proper route for reloading

--- a/views/barkeeper.erb
+++ b/views/barkeeper.erb
@@ -73,7 +73,7 @@
     });
 
     setInterval(function() {
-      $('#content').load('/barkeeper #content');
+      $('#content').load('/<%= @venue %>/barkeeper #content');
     }, 10000);
         $.ajax({
         type: "PUT",
