--- a/views/menutest.erb
+++ b/views/menutest.erb
@@ -10,6 +10,7 @@
         </div>
         <div class="modal-body">
           <h3><a href="#" class="add-vodka" data-dismiss="modal" aria-hidden="true">Vodka</a></h3>
+          <h3><a href="#" class="add-tequila" data-dismiss="modal" aria-hidden="true">Tequila</a></h3>
           <h3><a href="#" class="add-gin" data-dismiss="modal" aria-hidden="true">Gin</a></h3>
           <h3><a href="#" class="add-rum" data-dismiss="modal" aria-hidden="true">Rum</a></h3>
         </div>
