Made remove icon red

--- a/views/menutest.erb
+++ b/views/menutest.erb
@@ -68,8 +68,8 @@
           </div>
         </div>
 
-        <div class="remove" style="margin-top:-30px; margin-left:-10px; color:red;">
-          <h3><a href="#" class="remove-drink"><i class="icon-remove-sign"></i></a></h3>
+        <div class="remove" style="margin-top:-30px; margin-left:-10px;">
+          <h3><a href="#" class="remove-drink" style="color:red;"><i class="icon-remove-sign"></i></a></h3>
         </div>
 
     </div>
@@ -124,8 +124,8 @@
           </div>
         </div>
 
-        <div class="remove" style="margin-top:-30px; margin-left:-10px; color:red;">
-          <h3><a href="#" class="remove-drink"><i class="icon-remove-sign"></i></a></h3>
+        <div class="remove" style="margin-top:-30px; margin-left:-10px;">
+          <h3><a href="#" class="remove-drink" style="color:red;"><i class="icon-remove-sign"></i></a></h3>
         </div>
 
     </div>
@@ -182,8 +182,8 @@
           </div>
         </div>
 
-        <div class="remove" style="margin-top:-30px; margin-left:-10px; color:red;">
-          <h3><a href="#" class="remove-drink"><i class="icon-remove-sign"></i></a></h3>
+        <div class="remove" style="margin-top:-30px; margin-left:-10px;">
+          <h3><a href="#" class="remove-drink" style="color:red;"><i class="icon-remove-sign"></i></a></h3>
         </div>
 
     </div>
@@ -242,8 +242,8 @@
           </div>
         </div>
 
-        <div class="remove" style="margin-top:-30px; margin-left:-10px; color:red;">
-          <h3><a href="#" class="remove-drink"><i class="icon-remove-sign"></i></a></h3>
+        <div class="remove" style="margin-top:-30px; margin-left:-10px;">
+          <h3><a href="#" class="remove-drink" style="color:red;"><i class="icon-remove-sign"></i></a></h3>
         </div>
 
     </div>
