--- a/views/mprinter.erb
+++ b/views/mprinter.erb
@@ -1,6 +1,8 @@
 <div id='content'>
 
   <h1><a href='/mprinter/authorize'>Authorize Mprinter</a></h1>
+  <p><%= session[:mprinter_access_token] %></p>
+
   <h1><a href='/mprinter/add_device'>Add MPrinter</a></h1>
 
 </div>
